# fluid

./: Cargo.toml  README.md
assets/shaders/: calculate_offsets.wgsl  density_pressure.wgsl  density_pressure3d.wgsl  external_forces.wgsl  fluid_normals.wgsl  fluid_utils.wgsl  forces.wgsl  integration.wgsl  neighbor_reduction3d.wgsl  particle_render3d.wgsl  position_correction.wgsl  pressure_force.wgsl  pressure_force3d.wgsl  raymarch.wgsl  recompute_velocities.wgsl  reorder.wgsl  reorder_copyback.wgsl  screen_space_fluid.wgsl  spatial_hash.wgsl  update_particles3d.wgsl  update_positions.wgsl  velocity_material.wgsl  viscosity.wgsl  viscosity_force3d.wgsl
assets/shaders/2d/: integration.wgsl  reorder.wgsl  spatial_hash.wgsl
assets/shaders/3d/: density_pressure.wgsl  fluid_sim.wgsl  neighbor_reduction.wgsl  predict_positions.wgsl  pressure_force.wgsl  unity_style.wgsl  update_particles.wgsl  viscosity_force.wgsl
assets/shaders/screenspace/: bilateral_filter.wgsl
src/: cam.rs  camera.rs  constants.rs  fluid3d.rs  fluid_render_pass.rs  gpu_fluid.rs  gpu_fluid3d.rs  gpu_fluid_simple.rs  gpu_render3d.rs  gpu_sim.rs  lib.rs  main.rs  marching.rs  math.rs  neighbor_reduction3d.rs  orbit_camera.rs  presets.rs  raymarch.rs  render.rs  reordering.rs  screen_space_fluid.rs  screenspace.rs  sim.rs  simulation.rs  simulation3d.rs  spatial_hash.rs  spatial_hash3d.rs  spawner.rs  three_d.rs  two_d.rs  ui.rs  utils.rs
src/three_d/: camera.rs  gpu_fluid.rs  gpu_render.rs  marching.rs  presets.rs  raymarch.rs  screenspace.rs  screenspace_fluid.rs  simulation.rs
src/two_d/: camera.rs  gpu_fluid.rs  reordering.rs  simulation.rs  spawner.rs
(+9 files in other folders)
